test layout and list

--- a/static/index.html
+++ b/static/index.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport"
           content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height"/>
-    <title>Antivirus</title>
+    <title> Reddit News Feed </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link type='text/css' href='/assets/css/style.css' rel="stylesheet"/>
-    <script>document.host = 'http://localhost:8000/api'</script>
 </head>
 <body class="pace-done">
 <div id="root"></div>
